Fix alignment issue with sidebar-layout

--- a/customize.dist/src/less2/include/sidebar-layout.less
+++ b/customize.dist/src/less2/include/sidebar-layout.less
@@ -7,6 +7,7 @@
 @import (reference) "/customize/src/less2/include/colortheme-all.less";
 @import (reference) "/customize/src/less2/include/leftside-menu.less";
 @import (reference) "/customize/src/less2/include/browser.less";
+@import (reference) "/customize/src/less2/include/variables.less";
 
 @sidebar_block-width: 25rem;;
 @sidebar_base-margin: 0.5rem;
@@ -214,7 +215,7 @@
                             border-top-left-radius: 0px;
                             border-bottom-left-radius: 0px;
                             border-left: 0px;
-                            height: 40px;
+                            height: @variables_input-height;
                             margin: 0 !important;
                         }
                     }
